fixed start.html to align cards horizontaly

--- a/FleetTracker/src/main/webapp/styles/style.css
+++ b/FleetTracker/src/main/webapp/styles/style.css
@@ -216,9 +216,6 @@ a,
     margin-top: 30px;
     margin-left: 15px;
     margin-right: auto;
-	padding-right: 15px;
-	
+	padding-right: 15px;	
   }
-  .cardLayout{
-  float: left;
-  }
+  
